--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,13 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+.env
+
+static/*
+media/*
+
+images/*
+
 # PyCharm
 #  JetBrains specific template is maintainted in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
