--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
 asgiref==3.5.2
+black==22.8.0
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.1
+click==8.1.3
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==37.0.4
 defusedxml==0.7.1
 Django==4.1.1
+django-ckeditor==6.5.1
 django-constance==2.9.1
 django-cors-headers==3.13.0
 django-filter==22.1
+django-js-asset==2.0.0
 django-model-utils==4.2.0
 django-picklefield==3.1
 django-rest-swagger==2.2.0
@@ -24,9 +28,12 @@ itypes==1.2.0
 Jinja2==3.1.2
 Markdown==3.4.1
 MarkupSafe==2.1.1
+mypy-extensions==0.4.3
 oauthlib==3.2.0
 openapi-codec==1.3.2
+pathspec==0.10.1
 Pillow==9.2.0
+platformdirs==2.5.2
 psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.4.0
@@ -41,5 +48,6 @@ six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.3.0
 sqlparse==0.4.2
+tomli==2.0.1
 uritemplate==4.1.1
 urllib3==1.26.12
