--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,4 @@ images/*
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+*.jpeg
